# renote

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yaml
examples/: issue_search_config.yaml  longhorn_note_config.yaml  node_config.yaml  note_config.yaml  release_config.yaml
hack/: generate-artifact-name.sh  setup-dev.sh
src/: config.rs  log.rs  main.rs  result.rs  util.rs
src/cmd/: arg.rs  mod.rs
src/cmd/issue/: add_label.rs  assign_milestone.rs  mod.rs  remove_label.rs  search.rs  unassign_milestone.rs
src/cmd/note/: config.rs  create.rs  create_note.rs  mod.rs  template.rs
src/component/: issue.rs  mod.rs  note.rs
src/component/repo/: issue.rs  mod.rs  release.rs
workflows/: build.yaml
