[package]
name = "renote"
version = "0.1.1"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"
description = "renote, a complementary tool to use with gh to extend GitHub operation experience"
keywords = ["cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ecatlabs/renote"
repository = "https://github.com/ecatlabs/renote"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
chrono = "0.4"

[dependencies]
clap = "2"
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
anyhow = "1.0"
dirs = "3.0"
semver = "0.11"
hubcaps-ex = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
maplit = "1.0"
tera = { version = "1", default-features = false }
regex = "1.4.5"
libcli-rs = "0.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
#panic = 'abort'
