[package]
name = "renote"
version = "0.1.1"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "renote, a complementary tool to use with gh to extend GitHub operation experience"
keywords = ["cli", "github", "release"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ecatlabs/renote"
repository = "https://github.com/ecatlabs/renote"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
chrono = "0.4"

[dependencies]
clap = { version = "3.1.6", features = ["env"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
anyhow = "1.0.56"
dirs = "4.0.0"
semver = "1.0.6"
hubcaps-ex = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1.52"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
maplit = "1.0"
tera = { version = "1", default-features = false }
regex = "1.5.5"
libcli-rs = "0.1"
chrono = "0.4"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
#panic = 'abort'
